<resources>
    <string name="app_name">HelloWorld</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_the_name">Enter the name</string>
    <string name="enter_date_of_birth">Enter Date of Birth</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_hobby">Enter Hobby</string>
</resources>